@@ -136,3 +136,7 @@ ol li {
 .search_results_summary {
   font-size: 82%;
 }
+
+.invite_status {
+  font-size: 82%;
+}
